# pygeoapi-checker

./: .gitignore  README.md  pyproject.toml
src/: pygeoapi_checker.py
